--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
           <a href="#home" class="nav-link"><li>Home</li></a>
           <a href="#about" class="nav-link"><li>About</li></a>
           <a href="#schedule" class="nav-link"><li>Schedule</li></a>
-          <a href="#contact" class="nav-link"><li>Contact</li></a>
         </ul>
       </nav>
     </header>
@@ -46,14 +45,14 @@
     </section>
 
     <!-- welcome section -->
-    <section id="home">
+    <section id="home" class="anchor">
       <h1>VERTIGO</h1>
       <p>Eighties Pop & Rock Dance Band<br />...and Much More!</p>
-      <a href="#about" class="btn">Read More</a>
+      <a href="#contact" class="btn">Book a Show</a>
     </section>
 
     <!-- about -->
-    <section id="about">
+    <section id="about" class="anchor">
       <div id="about-info">
         <h2>About Vertigo</h2>
         <p>
@@ -79,10 +78,6 @@
         ></iframe>
       </div>
       <div id="band-members">
-        <!-- <img src="./img/band-member1.jpg" alt="Band Member of Vertigo" />
-        <img src="./img/band-member2.jpg" alt="Band Member of Vertigo" />
-        <img src="./img/band-member3.jpg" alt="Band Member of Vertigo" />
-        <img src="./img/band-member4.jpg" alt="Band Member of Vertigo" /> -->
         <img src="./img/band-group1.jpg" alt="" />
       </div>
       <p id="quote">
@@ -90,31 +85,30 @@
       </p>
     </section>
 
-    <!-- google calendar -->
-    <!-- needs to be adjusted to size with window -->
-    <section id="schedule">
-      <h2>Come See Us Play!</h2>
-      <iframe
-        src="https://www.google.com/calendar/embed?showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23999999&amp;src=nickrincon%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FChicago"
-      ></iframe>
+    <!-- Schedule section -->
+    <section id="schedule" class="anchor">
+      <h2>Come See Us!</h2>
+      <!-- google calendar -->
+      <div id="calendar">
+        <iframe
+          src="https://www.google.com/calendar/embed?showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23999999&amp;src=nickrincon%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FChicago"
+        ></iframe>
+      </div>
+      <!-- Contact info -->
+      <div id="contact">
+        <h2>Book a Show!</h2>
+        <a href="tel:281-250-0440"
+          ><i class="fas fa-phone-square-alt"></i> (281) 250-0440</a
+        >
+        <a
+          href="mailto:vertigoinfo@yahoo.com?subject=MESSAGE FROM VERTIGO MUSIC DOT NET"
+          ><i class="fas fa-envelope-square"></i> vertigoinfo@yahoo.com</a
+        >
+      </div>
     </section>
-
-    <!-- Contact information -->
-    <!-- add email/phone links -->
-    <section id="contact">
-      <h2>Book a Show!</h2>
-      <a href="tel:281-250-0440"
-        ><i class="fas fa-phone-square-alt"></i> (281) 250-0440</a
-      >
-      <a
-        href="mailto:vertigoinfo@yahoo.com?subject=MESSAGE FROM VERTIGO MUSIC DOT NET"
-        ><i class="fas fa-envelope-square"></i> vertigoinfo@yahoo.com</a
-      >
-    </section>
-
-    <!-- footer -->
+    <!-- Footer -->
     <footer id="main-footer">
-      Marchaleous Web Design | &copy; Copyright 2020, All Rights Reserved
+      Marchaleous Web Design | &copy; Copyright 2020
     </footer>
   </body>
 </html>
