--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
   </head>
   <body>
     <!-- nav bar -->
-    <header>
+    <nav>
       <nav id="main-nav">
         <a href="#home"><img src="./img/icon.png" alt="Logo" id="logo" /></a>
-        <ul>
-          <a href="#home" class="nav-link"><li>Home</li></a>
-          <a href="#about" class="nav-link"><li>About</li></a>
-          <a href="#schedule" class="nav-link"><li>Schedule</li></a>
+        <ul class="list-inline">
+          <li class="">
+            <a href="#home" class="nav-link">Home</a>
+          </li>
+          <li>
+            <a href="#about" class="nav-link">About</a>
+          </li>
+          <li>
+            <a href="#schedule" class="nav-link">Schedule</a>
+          </li>
         </ul>
       </nav>
-    </header>
+    </nav>
 
     <!-- Social media links -->
     <section id="links">
