--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
 
     <!-- Social media links -->
     <div class="container-fluid fixed-bottom text-white text-right mb-2">
+      <a href="https://www.instagram.com/nikrinkin/" target="_blank"
+        ><i class="fab fa-instagram-square fa-2x text-white"></i
+      ></a>
       <a
         href="http://www.facebook.com/pages/Vertigo/100314143063"
         target="_blank"
