tweaked navigation and appearance on phone

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <!-- Google calendar -->
     <div class="container my-4 text-center" id="schedule">
-      <h2>Our Schedule</h2>
+      <!-- <h2>Our Schedule</h2> -->
       <div class="embed-responsive embed-responsive-1by1 google-calendar">
         <iframe
           src="https://www.google.com/calendar/embed?showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23999999&amp;src=nickrincon%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FChicago"
@@ -174,7 +174,7 @@
     <!-- Footer -->
     <footer class="page-footer font-small pt-4">
       <!-- Footer Links -->
-      <div class="footer-copyright text-center py-3">Vertigo Music &copy;</div>
+      <div class="footer-copyright text-center py-3">Vertigo &copy;</div>
     </footer>
 
     <!-- Optional JavaScript -->
