vertigo font change

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./bootstrap.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Vertigo Band</title>
   </head>
@@ -25,7 +29,7 @@
     <nav
       class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark bg-darker"
     >
-      <a class="navbar-brand" href="#">Vertigo Music</a>
+      <a class="navbar-brand vertigo" href="#">Vertigo Music</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -98,7 +102,7 @@
       <div class="container h-100">
         <div class="row h-100 align-items-center">
           <div class="col-12 text-center">
-            <h1 class="display-3">VERTIGO</h1>
+            <h1 class="display-3 vertigo">VERTIGO</h1>
             <p class="lead">
               Eighties Pop & Rock Dance Band<br />...and Much More!
             </p>
