Changed vertigo music to vertigo band

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav
       class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark bg-darker"
     >
-      <a class="navbar-brand vertigo" href="#">Vertigo Music</a>
+      <a class="navbar-brand vertigo" href="#">Vertigo Band</a>
       <button
         class="navbar-toggler"
         type="button"
